first commit 2610 2151hrs

--- a/src/componentes/produtos/Produtos.css
+++ b/src/componentes/produtos/Produtos.css
@@ -1,10 +1,11 @@
 .products{
     background-color:#f5f5f7 ;
-    font-size: 100px;
+    font-size: 50px;
     text-align: center;
 }
 
 
 .NameProducts{
-    font-size: 30px;
+    font-size: 20x;
 }
+
