--- a/src/componentes/navbar/Navbar.css
+++ b/src/componentes/navbar/Navbar.css
@@ -7,10 +7,11 @@
 .nav{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: space-between;
     font-size: 20px;
     margin: 0px 0px 0px 0px;
-    padding: 10px 0px 0px 10px;
+    padding: 2px 0px 0px 10px;
     color: black;
     background-color: rgb(231, 235, 235);
 
@@ -23,9 +24,18 @@
     justify-content:space-evenly;
     font-size: 20px;
     margin: 0px 10px 0px 0px;
-    padding: 10px 10px 0px 10px;
+    padding: 0px 10px 0px 10px;
     color: black;
     background-color: rgb(231, 235, 235);
+
+}
+
+
+.nav2{
+    display: flex;
+    flex-direction: row;
+    margin: 0px 2px 0px 0px;
+    padding: 0px 2px 0px 0px;
 
 }
 
@@ -33,4 +43,16 @@
     width: 50px;
     height: 50px;
 
+}
+
+.list{
+    font-size: 15px;
+    background-color: antiquewhite;
+    margin: 0px 4px 0px 0px;
+    padding: 8px 5px 8px 5px;
+}
+
+
+.disableLink{
+    pointer-events: none;
 }
